# python-package-governance

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  reusable-build.yml  reusable-security.yml
docs/: package-security-standard.md
docs/security/: accepted-risks.md  dependency-review.md  release-integrity.md
requirements/: README.md  release.in  release.txt  test.in  test.txt
scripts/: inspect_dist.py  verify_dependencies.py
templates/: SECURITY.md  dependency-review.md
tests/: test_codeql_workflow.py  test_inspect_dist.py  test_verify_dependencies.py
