[build-system]
requires = ["setuptools>=77,<84"]
build-backend = "setuptools.build_meta"

[project]
name = "python-package-governance"
version = "0.1.0"
description = "Reusable supply-chain security checks for Python packages"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["tomli>=2,<3; python_version < '3.11'"]

[project.optional-dependencies]
test = ["pytest>=8,<10", "ruff>=0.6,<1"]

[tool.setuptools.packages.find]
include = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
